--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -67,15 +67,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.slide-fade-enter-active {
-  transition: all 0.5s ease-in-out;
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
 }
 
-.slide-fade-leave-active {
-  transition: all 0.5s cubic-bezier(1, 0.5, 0.8, 1);
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
 }
 
-.slide-fade-enter-from,
-.slide-fade-leave-to {
+.sidenav-enter-active,
+.sidenav-leave-active {
+  transition: all 0.3s ease-in-out;
+}
+
+.sidenav-enter-from,
+.sidenav-leave-to {
+  transform: translateX(-100px);
   opacity: 0;
 }
