--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,15 +6,23 @@
 @tailwind components;
 @tailwind utilities;
 
-.slide-fade-enter-active {
-    transition: all 0.5s ease-in-out;
-  }
-  
-  .slide-fade-leave-active {
-    transition: all 0.5s cubic-bezier(1, 0.5, 0.8, 1);
-  }
-  
-  .slide-fade-enter-from,
-  .slide-fade-leave-to {
-    opacity: 0;
-  }
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.sidenav-enter-active,
+.sidenav-leave-active {
+  transition: all 0.3s ease-in-out;
+}
+
+.sidenav-enter-from,
+.sidenav-leave-to {
+  transform: translateX(-100px);
+  opacity: 0;
+}
