--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,7 +69,7 @@
 @tailwind utilities;
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 0.5s ease;
+  transition: opacity 0.5s;
 }
 
 .fade-enter-from,
